--- a/index.html
+++ b/index.html
@@ -276,7 +276,13 @@ h2 a {
   <td>
     (ad)
     <div class="banners_128x512"></div>
-    <img src="../template/banner_128x64.png">
+    <br>
+    <div class="banners_128x64"></div>
+    <br>
+    <div class="banners_128x64"></div>
+    <br>
+    <div class="banners_128x64"></div>
+    
 
   </td>
 
