added 128x64 sized banners to all_banners site

--- a/all_banners/index.html
+++ b/all_banners/index.html
@@ -10,7 +10,7 @@
 
 const remove_double_banners = function() {
 	// @Banner_Support_Sizes
-	const supported_sizes = ["_512x128", "_128x512"];
+	const supported_sizes = ["_512x128", "_128x512", "_128x64"];
 
 	for (let i = 0; i < supported_sizes.length; i++) {
 
@@ -64,65 +64,81 @@ window.addEventListener("DOMContentLoaded", function() {
 
 	
 <!-- random now -->
-	<div class="banners_512x128"></div>
+
+	<div class="banners_128x64"></div>
 	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
 	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
 	<div class="banners_512x128"></div>
 	<div class="banners_512x128"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_512x128"></div>
 	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_512x128"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_512x128"></div>
 	<div class="banners_128x512"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_128x512"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
@@ -131,39 +147,25 @@ window.addEventListener("DOMContentLoaded", function() {
 	<div class="banners_512x128"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
 	<div class="banners_512x128"></div>
 	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_512x128"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
-	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
+	<div class="banners_128x512"></div>
 	<div class="banners_128x512"></div>
 	<div class="banners_512x128"></div>
 	<div class="banners_512x128"></div>
-	<div class="banners_512x128"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
 	<div class="banners_128x512"></div>
+	<div class="banners_128x64"></div>
+	<div class="banners_128x64"></div>
+
 
 </body>
 
