--- a/banner_network_association/index.html
+++ b/banner_network_association/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Banner Network Association</title>
-	<script type="text/javascript" src="../misc/bna.js"></script>
+	<script type="text/javascript" src="../_misc/bna.js"></script>
 </head>
 <body>
 
@@ -20,7 +20,7 @@
 <h1><a href="#1">#1</a> Embed the glue</h1>
 <p>You have to include this javascript:</p>
 
-<!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #f92672">&lt;script </span><span style="color: #a6e22e">type=</span><span style="color: #e6db74">&quot;text/javascript&quot;</span> <span style="color: #a6e22e">src=</span><span style="color: #e6db74">&quot;../misc/bna.js&quot;</span><span style="color: #f92672">&gt;&lt;/script&gt;</span>
+<!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #f92672">&lt;script </span><span style="color: #a6e22e">type=</span><span style="color: #e6db74">&quot;text/javascript&quot;</span> <span style="color: #a6e22e">src=</span><span style="color: #e6db74">&quot;../_misc/bna.js&quot;</span><span style="color: #f92672">&gt;&lt;/script&gt;</span>
 </pre></div>
 
 <h1><a href="#2">#2</a> Include atleast one banner container</h1>
