--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <meta charset="UTF-8">
-<script type="text/javascript" src="misc/bna.js"></script>
+<script type="text/javascript" src="_misc/bna.js"></script>
 <style type="text/css">
 
 body {
   font-family: 'Courier New', monospace;
+  max-width: 700px;
+  margin: auto;
 }
 
 table {
@@ -61,7 +63,7 @@ h2 a {
 |||||\__\ <span class="logo_top">\\\</span>_\ <span class="logo_top">\\\</span>_______\ <span class="logo_top">\\\</span>__\ <span class="logo_top">\\\</span>_________/<span class="logo_top">\\\\\\\\\\</span>__\ <span class="logo_top">\\\</span>___/<span class="logo_top">\\\</span>_\   
 ||||||\__\ <span class="logo_top">\\\</span>_\ <span class="logo_top">\\\</span>_______\ <span class="logo_top">\\\</span>__\ <span class="logo_top">\\\</span>________/<span class="logo_top">\\\</span>____/<span class="logo_top">\\\</span>__\ <span class="logo_top">\\\</span>__\ <span class="logo_top">\\\</span>_\  
 |||||||\__\ <span class="logo_top">\\\</span>_\ <span class="logo_top">\\\</span>__/<span class="logo_top">\\\\\\\\\</span>__\ <span class="logo_top">\\\\\\\\\</span>_\//<span class="logo_top">\\\\\\\\</span>/<span class="logo_top">\\</span>_\ <span class="logo_top">\\\\\\\\\</span>__\ 
-||||||||\__\/_/__\/_/__\/_______/___\/_______/___\/______/\//__\/_______/___\
+||||||||\__\/_/__\/_/__\/_______/___\/_______/___\/______/\//__\/_<i>.nl</i>___/___\
 </div>
 <script type="text/javascript">
 
@@ -141,26 +143,7 @@ h2 a {
 |||||||||
 |||||||||
 |||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
-|||||||||
+||||||||| 
 |||||||||
 |||||||||
 |||||||||
@@ -174,10 +157,10 @@ h2 a {
         |
 </td>
 
-<td style="vertical-align: top;" width="544px">
+<td style="vertical-align: top; padding-left: 16px; border-right: 1px solid black;" width="505px">
 
-  (advertisement)
-  <div class="banners_512x128"></div>
+  <br>
+  <!-- <div class="banners_512x128"></div> -->
 
   <h2><a href="#Opening Times">Opening Times (Goal*...🤦)</a></h2>
 
@@ -265,16 +248,21 @@ h2 a {
     </tr>
   </table>
   <br>
+  <br>
+  <br>
+  <span style="font-size: 12px">made by <a href="http://doekewartena.nl">doekewartena.nl</a></span>
 
-  <hr>
-  (advertisement)
   <div class="banners_512x128"></div>
 
 
   </td>
 
   <td>
-    (ad)
+    
+<!--     <div class="banners_128x64"></div>
+    <br>
+    <div class="banners_128x64"></div>
+    <br>
     <div class="banners_128x512"></div>
     <br>
     <div class="banners_128x64"></div>
@@ -282,7 +270,7 @@ h2 a {
     <div class="banners_128x64"></div>
     <br>
     <div class="banners_128x64"></div>
-    
+     -->
 
   </td>
 
