--- a/byos/index.html
+++ b/byos/index.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="../misc/bna.js"></script>
+<script type="text/javascript" src="../_misc/bna.js"></script>
 
 <h1>B.Y.O.S</h1>
 <h1>Bring Your Own Site</h1>
