--- a/all_banners/index.html
+++ b/all_banners/index.html
@@ -1,11 +1,16 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<meta charset="UTF-8">
-	<title>All Banners</title>
-	<script type="text/javascript" src="../_misc/bna.js"></script>
+<meta charset="UTF-8">
+<title>All Banners</title>
+<script type="text/javascript" src="../_misc/bna.js"></script>
 
-	<script type="text/javascript">
+<style type="text/css">
+
+td {
+	vertical-align: top;
+}	
+
+</style>
+
+<script type="text/javascript">
 
 window.addEventListener("DOMContentLoaded", function() {
 
@@ -20,6 +25,7 @@ window.addEventListener("DOMContentLoaded", function() {
 			const banner_data = bna.banners["_128x64"][i];
 			const site = banner_data.site;
 			const hover_description = bna.info_all_sites[site].hover_description;
+			const title = bna.info_all_sites[site].title;
 
 			site_table.insertAdjacentHTML( 'beforeend',
 				`<tr>
@@ -27,7 +33,8 @@ window.addEventListener("DOMContentLoaded", function() {
 						<div class="banners_128x64" data-site="${site}"></div>
 					</td>
 					<td>
-						${hover_description}
+						<b>${title}</b><br>
+						<div style="max-width: 400px">${hover_description}</div>
 					</td>
 				</tr>
 				`
@@ -43,10 +50,4 @@ window.addEventListener("DOMContentLoaded", function() {
 
 </script>
 
-</head>
-<body>
-
-	<table id="site_table"></table>	
-
-</body>
-</html>
+<table id="site_table"></table>	
