--- a/hslab/index.html
+++ b/hslab/index.html
@@ -253,6 +253,7 @@ h2 a {
   <span style="font-size: 12px">made by <a href="http://doekewartena.nl">doekewartena.nl</a></span>
 
   <div class="banners_512x128"></div>
+  <div class="banners_128x64" data-site="prolactin"></div>
 
 
   </td>
