banners is now called banners e.g. banner_512x128

--- a/all_banners/index.html
+++ b/all_banners/index.html
@@ -24,10 +24,10 @@ window.addEventListener("DOMContentLoaded", async function() {
 
 		const site = bna.sites_that_have_banner_size_x["_128x64"][i];
 
-		site_table.insertAdjacentHTML( 'beforeend',
+		site_table.insertAdjacentHTML('beforeend',
 			`<tr>
 				<td>
-					<div class="banners_128x64" data-site="${site.folder}"></div>
+					<div class="banner_128x64" data-site="${site.folder}"></div>
 				</td>
 				<td>
 					<b>${site.title}</b><br>
