--- a/banner_network_association/index.html
+++ b/banner_network_association/index.html
@@ -22,7 +22,7 @@
 <h1><a href="#2">#2</a> Include atleast one banner container</h1>
 <p>You have to include atleast one div for a banner:</p>
 
-<!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;banners_512x128&quot;</span><span style="color: #f92672">&gt;&lt;/div&gt;</span>
+<!-- HTML generated using hilite.me --><div style="background: #272822; overflow:auto;width:auto;border:solid gray;border-width:.1em .1em .1em .8em;padding:.2em .6em;"><pre style="margin: 0; line-height: 125%"><span style="color: #f92672">&lt;div</span> <span style="color: #a6e22e">class=</span><span style="color: #e6db74">&quot;banner_512x128&quot;</span><span style="color: #f92672">&gt;&lt;/div&gt;</span>
 </pre></div>
 
 
@@ -34,5 +34,5 @@
 <p>Keep it simple, stupid</p>
 
 
-<div class="banners_512x128"></div>
+<div class="banner_512x128"></div>
 
