--- a/hslab/index.html
+++ b/hslab/index.html
@@ -160,7 +160,7 @@ h2 a {
 <td style="vertical-align: top; padding-left: 16px; border-right: 1px solid black;" width="505px">
 
   <br>
-  <!-- <div class="banners_512x128"></div> -->
+  <!-- <div class="banner_512x128"></div> -->
 
   <h2><a href="#Opening Times">Opening Times (Goal*...🤦)</a></h2>
 
@@ -252,25 +252,25 @@ h2 a {
   <br>
   <span style="font-size: 12px">made by <a href="http://doekewartena.nl">doekewartena.nl</a></span>
 
-  <div class="banners_512x128"></div>
-  <div class="banners_128x64" data-site="prolactin"></div>
+  <!-- <div class="banner_512x128"></div>
+   <div class="banner_128x64" data-site="prolactin"></div>-->
 
 
   </td>
 
   <td>
     
-<!--     <div class="banners_128x64"></div>
+<!--     <div class="banner_128x64"></div>
     <br>
-    <div class="banners_128x64"></div>
+    <div class="banner_128x64"></div>
     <br>
-    <div class="banners_128x512"></div>
+    <div class="banner_128x512"></div>
     <br>
-    <div class="banners_128x64"></div>
+    <div class="banner_128x64"></div>
     <br>
-    <div class="banners_128x64"></div>
+    <div class="banner_128x64"></div>
     <br>
-    <div class="banners_128x64"></div>
+    <div class="banner_128x64"></div>
      -->
 
   </td>
