--- a/braitenberg/index.html
+++ b/braitenberg/index.html
@@ -1,5 +1,6 @@
 <meta charset="UTF-8">
+
 <script type="text/javascript" src="../_misc/bna.js"></script>
 <h1>Braitenberg</h1>
-<div class="banners_512x128"></div>
-<div class="banners_128x512"></div>
+<div class="banner_512x128"></div>
+<div class="banner_128x512"></div>
