--- a/byos/index.html
+++ b/byos/index.html
@@ -1,5 +1,5 @@
+<meta charset="UTF-8">
 <script type="text/javascript" src="../_misc/bna.js"></script>
-
 <h1>B.Y.O.S</h1>
 <h1>Bring Your Own Site</h1>
 since 2021
@@ -33,4 +33,4 @@ mail(at)hslab(dot)nl
 <br>
 <hr>
 (advertisement)<br>
-<div class="banners_512x128"></div>
+<div class="banner_512x128"></div>
