--- a/mp4_banner_test/index.html
+++ b/mp4_banner_test/index.html
@@ -1,5 +1,5 @@
 <meta charset="UTF-8">
 <script type="text/javascript" src="../_misc/bna.js"></script>
 <h1>Template</h1>
-<div class="banners_512x128"></div>
-<div class="banners_128x512"></div>
+<div class="banner_512x128"></div>
+<div class="banner_128x512"></div>
