--- a/hslab/index.html
+++ b/hslab/index.html
@@ -222,7 +222,7 @@ h2 a {
     </tr>
     <tr>
       <td></td>
-      <td><a href="banner_network_association">Banner Network Association</a></td>
+      <td><a href="../banner_network_association">Banner Network Association</a></td>
     </tr>
   </table>
 
@@ -231,7 +231,7 @@ h2 a {
   <table>
     <tr>
       <td>🌐</td>
-      <td><a href="byos">Bring Your Own Site</a></td>
+      <td><a href="../byos">Bring Your Own Site</a></td>
     </tr>
   </table>
   <br>
@@ -240,7 +240,7 @@ h2 a {
   <table>
     <tr>
       <td>📸</td>
-      <td><a href="workshop_camera_shutter">Camera Shutter</a></td>
+      <td><a href="../workshop_camera_shutter">Camera Shutter</a></td>
     </tr>
     <tr>
       <td>⚠️</td>
